// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabLinkFill renders 1`] = `
<a
  className="sc-iKKmqK gOpspd tab-link-fill"
/>
`;

exports[`TabLinkFill renders Href 1`] = `
<a
  className="sc-iKKmqK gOpspd tab-link-fill"
  href="www.google.com"
/>
`;

exports[`TabLinkFill renders count 1`] = `
<a
  className="sc-iKKmqK gOpspd tab-link-fill"
>
  <span
    className="sc-dIZBxk iRVLNE"
  >
    2
  </span>
</a>
`;

exports[`TabLinkFill renders element left 1`] = `
<a
  className="sc-iKKmqK gOpspd tab-link-fill"
>
  <div
    className="sc-fOpBKL jGPJxZ"
  >
    <span>
      Element
    </span>
  </div>
</a>
`;

exports[`TabLinkFill renders isTop 1`] = `
<a
  className="sc-iKKmqK gOpspd tab-link-fill"
/>
`;

exports[`TabLinkFill renders size 1`] = `
<a
  className="sc-iKKmqK cyMsLM tab-link-fill"
  size="small"
/>
`;
